@@ -259,6 +259,7 @@ In alphabetical order (by last name)
 ** Patches for Emacs
 ** Handling of Interrupt
 * Antti Tarvainen
+** Patch LH[#333] Fixed bug where rspec loads files repeatedly when running heckle
 ** Patch LH[#280] Fixed bug where heckle runs rspec runs heckle runs rspec etc.
 ** Patch [#14254] Improved error handling for Object#should and Object#should_not
 ** Patch [#14186] Remove dead code from message_expecation.rb
