@@ -5,6 +5,7 @@ Note: we've removed the metaclass method from Object. There were some generated 
 used it, and they will now break. Just replace the metaclass call with (class << self; self; end)
 and all will be well.
 
+* Patch from Antti Tarvainen to stop files from being loaded repeatedly when running heckle. Closes #333.
 * Fixed bug in which session object in example was not the same instance used in the controller. Closes #331. 
 * Added stub_model method which creates a real model instance with :id stubbed and data access prohibited.
 * Applied patch from Antti Tarvainen to fix bug where heckle runs rspec runs heckle runs rspec etc. Closes #280.
